# llm-provenance

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  lefthook.yml  rust-toolchain.toml
.github/workflows/: ci.yml
src/: artifact.rs  context.rs  digest.rs  error.rs  intent.rs  lib.rs  manifest.rs  provenance.rs  trace.rs  validate.rs
tests/: context.rs  provenance.rs  tracing.rs
