[package]
name = "llm-provenance"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Provider-neutral, canonical context hashing and generation provenance types for LLM applications."
license = "MIT OR Apache-2.0"
repository = "https://github.com/idknerdyshit/llm-provenance"
homepage = "https://github.com/idknerdyshit/llm-provenance"
documentation = "https://docs.rs/llm-provenance"
readme = "README.md"
keywords = ["llm", "provenance", "audit", "canonical-json", "ai"]
categories = ["data-structures", "encoding"]
include = [
    "src/**",
    "tests/**",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
sensitive-diagnostics = ["tracing"]

[dependencies]
hex = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.3"
sha2 = "0.11"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
tracing = { version = "0.1", default-features = false, features = ["std"], optional = true }

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
panic_in_result_fn = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"

# High-signal restriction lints for a provider-neutral library.
as_conversions = "warn"
empty_drop = "warn"
exit = "warn"
fallible_impl_from = "warn"
let_underscore_must_use = "warn"
mem_forget = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
string_slice = "warn"
try_err = "warn"
unused_result_ok = "warn"
unwrap_in_result = "warn"

# These pedantic lints are intentionally relaxed: they are either noisy for
# this public API or produce a less readable implementation here.
missing_errors_doc = "allow"
must_use_candidate = "allow"
single_match_else = "allow"
